--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "utilities";
 
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 
@@ -47,7 +48,7 @@ img {
   }
 
   a {
-    // color: #fff;
+    color: #fff;
     padding: 0.45rem;
     margin: 0 0.25rem;
 
