--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -21,3 +21,28 @@ $max-width: 1100px;
   background-color: $color;
   color: set-text-color($color);
 }
+
+// Margin and Padding
+$spaceAmounts: (1, 2, 3, 4, 5);
+
+@each $space in $spaceAmounts {
+  // All around margin
+  .m-#{$space} {
+    margin: #{$space}rem;
+  }
+
+  // Vertical margin
+  .my-#{$space} {
+    margin: #{$space}rem 0;
+  }
+
+  // All around padding
+  .p-#{$space} {
+    padding: #{$space}rem;
+  }
+
+  // Vertical padding
+  .py-#{$space} {
+    padding: #{$space}rem 0;
+  }
+}
