--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,3 +1,13 @@
+// Container
+.container {
+  max-width: $max-width;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
 // Text Styles
 .x-large {
   font-size: 4rem;
@@ -15,6 +25,10 @@
 .lead {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+.text-primary {
+  color: $primary-color;
 }
 
 // Backgrounds
