--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -31,6 +31,11 @@
   color: $primary-color;
 }
 
+// Images
+.round-img {
+  border-radius: 50%;
+}
+
 // Backgrounds
 .bg {
   &-primary {
@@ -108,11 +113,11 @@
 
 // Alerts
 .alert {
-padding: 0.8rem;
-margin: 1rem;
-opacity: 0.9;
-background: $light-color;
-color: #333;
+  padding: 0.8rem;
+  margin: 1rem;
+  opacity: 0.9;
+  background: $light-color;
+  color: #333;
 
   &.alert-primary {
     @include set-background($primary-color);
