--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -107,7 +107,7 @@
     @include set-background($danger-color);
 
     &:hover {
-      background: lighten($primary-color, 5%);
+      background: lighten($dark-color, 5%);
     }
   }
 
@@ -169,4 +169,16 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.table {
+  th,
+  td {
+    padding: 1rem;
+    text-align: left;
+  }
+
+  th {
+    background: $light-color;
+  }
 }
