--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,13 @@ img {
   width: 100%;
 }
 
+input,
+select,
+textarea,
+button {
+  font-family: inherit;
+}
+
 // Navbar
 .navbar {
   display: flex;
@@ -183,7 +190,6 @@ img {
   grid-template-columns: 1fr 4fr;
   grid-gap: 2rem;
   align-items: center;
-  padding: 1rem;
 
   & > div:first-child {
     text-align: center;
